// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`count should render correctly 1`] = `
<div>
  <div
    class="count"
  >
    number:0
  </div>
  <div
    class="sub-info"
  >
    time:
  </div>
  <div
    class="sub-info"
  >
    type:
  </div>
  <div
    class="sub-info"
  >
    step:1
  </div>
</div>
`;

exports[`count should render correctly 2`] = `
<div>
  <div
    class="count"
  >
    number:5
  </div>
  <div
    class="sub-info"
  >
    time:2019-2-12 12:24:39
  </div>
  <div
    class="sub-info"
  >
    type:Addition
  </div>
  <div
    class="sub-info"
  >
    step:2
  </div>
</div>
`;
